--- a/new/index.html
+++ b/new/index.html
@@ -12,7 +12,7 @@
         <div class="nav-left">
             <img src="/image/logo.png" class="logo">
             <ul>
-                <li><img src="image /notification.png"></li>
+                <li><img src="/image/notification.png"></li>
                 <li><img src="/image/inbox.png"></li>
                 <li><img src="/image/video.png"></li>
             </ul>
@@ -31,7 +31,7 @@
 
         <div class="settings-menu">
 
-            <div id="dark-btn">
+            <div id="dark-btn" class="dark-btn-on">
                 <span></span>
             </div>
 
